--- a/index.html
+++ b/index.html
@@ -1,1 +1,348 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>copycat site</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="wholeSite">
+      <div class="navBar">
+        <nav class="navbar navbar-expand-sm bg-light">
+          <div class="logo navbar-brand">
+            <img
+              src="/assets/logo.png"
+              alt="home banner image"
+              height="25px"
+              width="100px"
+            />
+          </div>
+          <ul class="navbar-nav">
+            <li class="nav-item">Become a host</li>
+            <li class="nav-item">Help</li>
+            <li class="nav-item">Sign up</li>
+            <li class="nav-item">Log in</li>
+          </ul>
+        </nav>
+      </div>
 
+      <div class="searchDiv card">
+        <!--find places area-->
+        <div class="searchHeader card-header">
+          <h2>Find places to stay on Airbnb</h2>
+          <p>Discover entire homes and private rooms perfect for any trip.</p>
+        </div>
+        <div class="form">
+          <form>
+            <label for="location">Location</label>
+            <input type="text" name="location" value="Nearby" />
+            <label for="checkin">Check In</label>
+            <input type="text" name="checkin" value="add date" />
+            <label for="checkout">Check Out</label>
+            <input type="text" name="checkout" value="add date " />
+            <label for="adults">Adults</label>
+            <input type="number" name="adults" value="0" />
+            <label for="children">Children</label>
+            <input type="number" name="children" value="0" />
+          </form>
+        </div>
+        <div class="buttons">
+          <button type="button" class="btn btn-light">Hot Tub</button>
+          <button type="button" class="btn btn-light">Pool</button>
+          <button type="button" class="btn btn-light">Wifi</button>
+        </div>
+        <div class="search">
+          <button type="button" class="btn btn-danger">Search</button>
+        </div>
+      </div>
+      <div class="banner">
+        <!--banner home image-->
+        <img
+          src="/assets/banner.png"
+          width="100"
+          height="100"
+          alt="banner image of house on water"
+        />
+      </div>
+      <div class="hosting card">
+        <!--Hosting banner-->
+        <div class="hostingBanner">
+          <img
+            class="card-img-top"
+            src="/assets/hosting.jpeg"
+            height="350"
+            alt="Man sitting on couch speaking into phone smiling"
+          />
+        </div>
+        <div class="hostingBlurb card-img-overlay">
+          <div class="tryHost">
+            <h3>Try hosting</h3>
+            <p>Earn up to $3,006/month by sharing your space in Charlotte</p>
+          </div>
+          <div class="learnMore">
+            <button type="button" class="btn btn-light">Learn more</button>
+          </div>
+        </div>
+      </div>
+      <div class="reviewsDiv">
+        <div class="reviewBlurb">
+          <h3>What guests are saying about homes in the United States</h3>
+          <p>
+            Over 75,500,000 guest reviews with an average of 4.8 out of 5 stars
+          </p>
+        </div>
+
+        <div class="allReviews card-group" style="width: 100%">
+          <div class="review1 card bg-dark">
+            <div class="reviewImg" id="reviewImg1">
+              <img
+                class="card-img-top"
+                src="/assets/review1.jpeg"
+                height="200"
+                width="100"
+                alt="interior of airbnb"
+              />
+            </div>
+            <div class="stars">
+              <img
+                class="card-img-top"
+                src="/assets/5star.jpeg"
+                alt="5 star image"
+                height="100"
+                width="100"
+              />
+            </div>
+            <div class="reviewPara card-body">
+              <p>
+                "Michelle and Robin made us feel welcome in their home. They
+                gave us a nice bottle of wine and homemade lemon bars upon our
+                arrival. The property was private and...
+              </p>
+            </div>
+
+            <div class="reviewer">
+              <img
+                class="rounded-circle"
+                src="/assets/michael.jpeg"
+                alt="reviewer pfp"
+                height="100"
+                width="100"
+              />
+              <div class="namePlace">
+                <p>Michael</p>
+                <p>United States</p>
+              </div>
+            </div>
+          </div>
+          <div class="review2 card bg-primary">
+            <div class="reviewImg" id="reviewImg2">
+              <img
+                class="card-img-top"
+                src="/assets/review2.jpeg"
+                height="200"
+                width="100"
+                alt="interior of airbnb"
+              />
+            </div>
+            <div class="stars">
+              <img
+                class="card-img-top"
+                src="/assets/5star.jpeg"
+                alt="5 star image"
+                height="100"
+                width="100"
+              />
+            </div>
+            <div class="reviewPara card-body">
+              <p>
+                "Kathy and Scott always make us feel welcome! This is our third
+                time staying here, and we always enjoy the studio and the view."
+              </p>
+            </div>
+            <div class="reviewer">
+              <img
+                class="rounded-circle"
+                src="/assets/nmplol.jpeg"
+                alt="review pfp"
+                height="100"
+                width="100"
+              />
+              <div class="namePlace">
+                <p>Nick</p>
+                <p>United States</p>
+              </div>
+            </div>
+          </div>
+          <div class="review3 card bg-danger">
+            <div class="reviewImg" id="reviewImg3">
+              <img
+                class="card-img-top"
+                src="/assets/review3.jpeg"
+                height="200"
+                width="100"
+                alt="interior of airbnb"
+              />
+            </div>
+            <div class="stars">
+              <img
+                class="card-img-top"
+                src="/assets/5star.jpeg"
+                alt="5 star image"
+                height="100"
+                width="100"
+              />
+            </div>
+            <div class="reviewPara card-body">
+              <p>
+                "My girlfriend and I loved out time here. Since it is an
+                airstream trailer things are a bit different from your typical
+                bed and breakfast--but it was wonderful. It was an...
+              </p>
+            </div>
+            <div class="reviewer">
+              <img
+                class="rounded-circle"
+                src="/assets/xqc.jpeg"
+                alt="reviewer pfp"
+                height="100"
+                width="100"
+              />
+              <div class="namePlace">
+                <p>Felix</p>
+                <p>Canada</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="amenities card-group">
+        <div class="support card">
+          <h3 class="faIcon"></h3>
+          <h3>24/7 customer support</h3>
+          <p>
+            Day or night, we're here for you. Talk to our support team from
+            anywhere in the world, any hour of day.
+          </p>
+        </div>
+        <div class="requirements card">
+          <h3 class="faIcon"></h3>
+          <h3>Global hosting requirements</h3>
+          <p>
+            All hosts must meet hosting requirements and maintain a minumum
+            rating to be on Airbnb.
+          </p>
+        </div>
+        <div class="allStar card">
+          <h3 class="faIcon"></h3>
+          <h3>All-star hosts</h3>
+          <p>
+            From fresh-pressed sheets to tips on where to get the best brunch,
+            our hosts are full of local hospitality.
+          </p>
+        </div>
+      </div>
+      <hr />
+
+      <h2>Just booked in United States</h2>
+      <div class="justBookedDiv card-columns" style="width: 100%">
+        <div class="booked card" id="booked1" style="width: 40%">
+          <div class="bookedimg">
+            <img
+              class="card-img-top"
+              src="/assets/booked1.jpeg"
+              alt="image of airbnb"
+            />
+          </div>
+          <div class="nameRating">
+            <p>House dome in Nantucket</p>
+            <!--put iframe icon below-->
+            <p>4.98 (458)</p>
+          </div>
+          <div class="homeDescrip">
+            <p>Serenity House ~ Dome house</p>
+            <p><strong>$167</strong> / night</p>
+          </div>
+        </div>
+        <div class="booked card" id="booked2" style="width: 40%">
+          <div class="bookedimg">
+            <img
+              class="card-img-top"
+              src="/assets/booked2.jpeg"
+              alt="image of airbnb"
+            />
+          </div>
+          <div class="nameRating">
+            <p>Shell home in Hilton Head</p>
+            <!--put iframe icon below-->
+            <p>4.87 (528)</p>
+          </div>
+          <div class="homeDescrip">
+            <p>Sea spa ~ Beach house</p>
+            <p><strong>$214</strong> / night</p>
+          </div>
+        </div>
+        <div class="booked card" id="booked3" style="width: 40%">
+          <div class="bookedimg">
+            <img
+              class="card-img-top"
+              src="/assets/booked3.jpeg"
+              alt="image of airbnb"
+            />
+          </div>
+          <div class="nameRating">
+            <p>Cabin in Haunted Woods</p>
+            <!--put iframe icon below-->
+            <p>2.08 (666)</p>
+          </div>
+          <div class="homeDescrip">
+            <p>Triangle beauty ~ Cabin</p>
+            <p><strong>$98</strong> / night</p>
+          </div>
+        </div>
+        <div class="booked card" id="booked4" style="width: 40%">
+          <div class="bookedimg">
+            <img
+              class="card-img-top"
+              src="/assets/booked4.jpeg"
+              alt="image of airbnb"
+            />
+          </div>
+          <div class="nameRating">
+            <p>Hobbit home in texas</p>
+            <!--put iframe icon below-->
+            <p>5.00 (2682)</p>
+          </div>
+          <div class="homeDescrip">
+            <p>Holy Hole ~ Hobbit home</p>
+            <p><strong>$198</strong> / night</p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <button type="button" class="btn btn-light">Show (2000+)</button>
+      </div>
+
+      <div class="whenTravel">
+        <div class="travelTalk">
+          <h3>When are you traveling?</h3>
+          <p>Add dates for updated pricing and availability</p>
+        </div>
+        <button type="button" class="btn btn-dark">Add dates</button>
+      </div>
+    </div>
+  </body>
+</html>
